--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ header
 
 nav
 {
-    background-color: grey;
+    background-color: green;
     padding: 5px;
 }
 
@@ -20,7 +20,7 @@ nav ul li
     list-style: none;
     background-color: #b2b2b2;
     display: inline;
-    color: white;
+    color: white; 
     text-decoration: none;
     padding: 15px;
     margin: 5px;
@@ -34,6 +34,12 @@ footer
     margin: 0;
     position: fixed;
     bottom: 0px;
+    height: 6%;
     width: 100%;
-    background-color: grey;
+    background-color: green;
+}
+
+body 
+{
+  background-image: url('img_background.jpg');
 }
